# django-header-filter

./: .coveragerc  LICENSE  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tasks.py  tox.ini
.github/workflows/: ci.yaml
requirements/: flake8.txt
src/header_filter/: __init__.py  actions.py  apps.py  compat.py  decorator.py  matchers.py  middleware.py  rules.py
tests/: _test_enforce.py  conftest.py  settings_example.py  test_actions.py  test_decorator.py  test_enforce.py  test_integration.py  test_matcher_and.py  test_matcher_base.py  test_matcher_header.py  test_matcher_header_name.py  test_matcher_header_re.py  test_matcher_not.py  test_matcher_or.py  test_matcher_truth_tables.py  test_matcher_xor.py  test_middleware.py  test_not.py  test_or.py  test_rules.py  test_test.py
tests/fake_app/: apps.py  urls.py  views.py
