[build-system]
requires = ["setuptools>=41.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 119
target-version = ["py35"]
skip-string-normalization = true

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "header_filter"
line_length = 119
multi_line_output = 3
use_parentheses = true
