[bdist_wheel]
universal = 1

[metadata]
name = django-header-filter
version = 0.0.1

[options]
install_requires =
    Django>=1.11,<2.3
package_dir =
    =src
packages = find:
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
tests =
    coverage
    pytest
    pytest-django

[isort]
default_section = THIRDPARTY
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = header_filter
line_length = 119
multi_line_output = 3
not_skip = __init__.py
use_parentheses = true

[flake8]
max-line-length = 119
no-accept-encodings = True

[pydocstyle]
convention = pep257
# http://www.pydocstyle.org/en/stable/error_codes.html
# add_ignore = D100,D101,D104,D105,D106,D107

[tool:pytest]
addopts = -ra
filterwarnings = once
testpaths = tests
django_find_project = false
