[metadata]
name = django-header-filter
version = 0.1.0
description = Filter requests depending on their headers
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
author = Fabio Sangiovanni
author_email = sjh+github@sanjioh.org
url = https://github.com/sanjioh/django-header-filter
classifiers =
    Private :: Do Not Upload

[options]
install_requires =
    Django>=1.11.0,<3.0.0
package_dir =
    =src
packages = find:
zip_safe = False

[options.packages.find]
where = src

[flake8]
max-line-length = 119
no-accept-encodings = True

[pydocstyle]
convention = pep257

[tool:pytest]
addopts = -ra
filterwarnings = once
testpaths = tests
django_find_project = false
