[metadata]
name = django-header-filter
version = 0.1.0
description = Header-based request filtering for Django
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
author = Fabio Sangiovanni
author_email = sjh+github@sanjioh.org
url = https://github.com/sanjioh/django-header-filter
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP :: HTTP Servers

[options]
install_requires =
    Django>=1.11.0,<3.1.0
package_dir =
    =src
packages = find:
zip_safe = False

[options.packages.find]
where = src

[flake8]
max-doc-length = 72
max-line-length = 119
no-accept-encodings = True

[pydocstyle]
convention = pep257
add_ignore = D104,D105

[tool:pytest]
addopts = -ra
filterwarnings = once
testpaths = tests
django_find_project = false
